# remnashop

./: Dockerfile  Dockerfile.local  Makefile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
app/: __main__.py
app/assets/locales/ru/: buttons.ftl  notifications.ftl
app/bot/middlewares/: __init__.py  base.py  error.py  garbage.py  i18n.py  maintenance.py  throttling.py  user.py
app/bot/models/: containers.py
app/bot/routers/dashboard/: dialog.py  getters.py  handlers.py
app/bot/routers/menu/: handlers.py
app/bot/services/: __init__.py  base.py  maintenance.py
app/bot/widgets/: banner.py  i18n_format.py
app/core/: constants.py  enums.py  formatters.py  logger.py
app/db/crud/: base.py  user.py
app/db/models/dto/: user.py
app/db/models/sql/: user.py
app/factories/: dispatcher.py  i18n.py  session_pool.py
assets/translations/ru/: buttons.ftl  messages.ftl  notifications.ftl  utils.ftl
src/api/endpoints/: remnawave.py
src/bot/: keyboards.py
src/bot/middlewares/: __init__.py  error.py
src/bot/routers/extra/: goto.py
src/bot/routers/subscription/: getters.py  handlers.py
src/bot/widgets/: i18n_format.py
src/core/: enums.py
src/core/utils/: formatters.py
src/infrastructure/payment_gateways/: base.py  telegram_stars.py  yookassa.py
src/infrastructure/redis/: cache.py
src/infrastructure/taskiq/tasks/: __init__.py  notifications.py  redirects.py  subscriptions.py
src/services/: access.py  notification.py  payment_gateway.py  remnawave.py  subscription.py  user.py
(+11 files in other folders)
